S13nSW: Set "Service-Worker" header when fetching service worker script

The spec requires "Service-Worker: script" header[1].
This fixes ServiceWorkerVersionBrowserTest.ServiceWorkerScriptHeader.

[1] https://w3c.github.io/ServiceWorker/#update-algorithm

Bug: 846229
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_mojo
Change-Id: I20a080eee91f66f99a5e8ea1320adc0c1d8b983e
Reviewed-on: https://chromium-review.googlesource.com/1080358
Reviewed-by: Kinuko Yasuda <kinuko@chromium.org>
Reviewed-by: Matt Falkenhagen <falken@chromium.org>
Commit-Queue: Kenichi Ishibashi <bashi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#563462}
Former-commit-id: 1a4877949772923aec952a4182118a42c50831ff